# DNS_utility

./: README.md  modParallel.F90
src/2decomp_fft/include/: decomp_2d.mod  decomp_2d_fft.mod  decomp_2d_io.mod  glassman.mod
src/2decomp_fft/src/: Makefile  Makefile.inc  decomp_2d.f90
src/VDS/parallel/: makecomm.inc
src/VDS/parallel/common/: makefile  modPRWHDF5.f90
src/VDS/serial/: makecomm.inc
src/VDS/serial/common/: makefile  modRWHDF5.f90  modrwhdf5.mod
src/fftpack5.1/: make.inc
src/fftpack5.1/test/: Makefile
src/parallel/: makecomm.inc
src/parallel/Initialization/CutGridFlow/: CutGridFlow_parallel.f90  CutGridFlow_parallel.inp  makefile
src/parallel/Initialization/InitGridFlow_HDF5/: InitGridFlow_HDF5.f90  InitGridFlow_HDF5.inp  makefile
src/parallel/Postprocessing/FFT_4D/: .goutputstream-E8ZTQZ  FFT_4D.f90  FFT_4D.inp  makefile
src/parallel/Postprocessing/corr/: corr3D.eqn  correlation.f90  correlation.inp  corrxy.eqn  corrxz.eqn  corryz.eqn  makefile  modFFTW.f90
src/parallel/Postprocessing/fft_test_r2c/: 1.out  1.out~  2.out  New Empty File2  example.f90  fft_test_r2c.f90  fft_test_r2c_2015-04-24.f90  fftdata  (+7 more)
src/parallel/common/: interp1d.f90  makefile  modAverage.f90  modBuffer.f90  modDerivative.f90  modFFT.f90  modFileIO_Compatible.f90  modGrid1d.f90  modMetrics.f90  modPRWHDF5.f90  modRWHDF5.f90  modReynoldsBudgets.f90  modTecbin.f90  tridiagonal.f90
src/pypost/: nozzle_Bspline_smooth.py
src/pypost/coord/: coord_converter.py
src/pypost/grid_generation/: .gitignore  InitBody  cone_flat_Colonius.py  cone_flat_Lele.py  swept_wing.py
src/pypost/grid_interpolation/: .gitignore  README  cone_dns.py  cone_fluent.py  nozzle_extract_normal_profiles.py  nozzle_fluent_to_structured.py
src/pypost/plot_helper/: copy_layfile.py  prms_calculator.py
src/pypost/util/: .gitignore  forge.sh  forge_deprecated.sh  make_util  r06duanl.sh  r10duanl.sh  requirements.txt  setup.py
src/pypost/util/util/kdtree/test/: CMakeLists.txt  sub.h5  test.f90
src/serial/: makecleanall.sh  makecomm.inc
src/serial/Postprocessing/coord_converter/: CMakeLists.txt  coord_converter.inp
src/serial/Postprocessing/coord_converter/src/: coord_converter.f90  main.f90  makefile
src/serial/common/: fftutil.f90  gridgen.f90  interp1d.f90  interp2d.f90  makefile  modBuffer.f90  modDerivative.f90  modDerivative_2013-03-19.f90  modFFT.f90  modFileIO.f90  modFileIO_Compatible.f90  modFlow.f90  modGrid1d.f90  modMetrics.f90  modNumRecipe.f90  modRWHDF5.f90  modRWHDF5_old.f90  modTKEBudgets.f90  modTecbin.f90  modTecplotIO.f90  nonlinearsolver.f90  orthogonal.f90  random.f90  rtbis.for  spectprocess.f90  unstructured.f90
(+254 files in other folders)
